2006-03-19  Maciej Stachowiak  <mjs@apple.com>
        
        * source/Window.xml:
        - added Ian Davis as editor
        - added current and latest links
        - folded in Ian's attribute descriptions for basic attributes of the Window object
        - added prose for the Browsing Contexts section, influenced by Web Apps 1.0 draft
        - tweaked Ian's descriptions to be stated as conformance requirements
        - removed some no longer needed comments
        - started moving to model with a single Window interface described in multiple sections
        - added description of basic DocumentWindow interface
        - fixed some types and source formattig issues
        - added acknowledgement for Ian Hickson
        
        * publish/Window.html: regenerated

2006-03-13  Maciej Stachowiak  <mjs@apple.com>

        - added initial generated HTML version
        
        * source/Window.xml: Update date.
        * source/respec.conf: Added.
        * publish/Window.html: Initial version, generated with respec.
        * publish/respec-w3c.css: Copied in by respec.
