@@ -6,7 +6,7 @@
           regenerated.
           ******* WARNING ********
         --><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.2 2006-03-19 22:08:21 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>12 March 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
+<title>Window Object 1.0</title><link rel="stylesheet" href="respec-w3c.css" type="text/css"></link><link rel="stylesheet" href="http://www.w3.org/StyleSheets/TR/base" type="text/css"></link><meta name="revision" content="$Id: Window.html,v 1.3 2006-03-20 03:59:34 mstachow Exp $"></meta></head><body><div class="head"><p><a href="http://www.w3.org/"><img class="head" src="http://www.w3.org/Icons/w3c_home" width="72" height="48" alt="W3C"></img></a></p><h1 class="head">Window Object 1.0</h1><h2 id="pagesubtitle">W3C Editor's Draft <em>12 March 2006</em></h2><dl><dt>This version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Latest version:</dt><dd><a href="http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html">http://dev.w3.org/cvsweb/~checkout~/2006/webapi/Window/publish/Window.html</a></dd><dt>Editors:</dt><dd><span class="person">Ian Davis (<a href="http://www.talis.com/">Talis Information Ltd.</a>) &lt;<a href="mailto:ian.davis@talis.com">ian.davis@talis.com</a>&gt;</span></dd><dd><span class="person">Maciej Stachowiak (<a href="http://apple.com/">Apple Computer, Inc.</a>) &lt;<a href="mailto:mjs@apple.com">mjs@apple.com</a>&gt;</span></dd></dl><p class="copyright"><a href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Copyright</a> ©2006
         <a href="http://www.w3.org/"><acronym title="World Wide Web Consortium">W3C</acronym></a><sup>®</sup>
         (<a href="http://www.csail.mit.edu/"><acronym title="Massachusetts Institute of Technology">MIT</acronym></a>,
         <a href="http://www.ercim.org/"><acronym title="European Research Consortium for Informatics and Mathematics">ERCIM</acronym></a>,
@@ -194,7 +194,7 @@
     context.</p>
 
     <p>A document that implements the DOM Core <code>Document</code>
-    interface and is presented in a browsing context interface <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em>
+    interface and is presented in a browsing context <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em>
     also implement the <code>DocumentWindow</code> interface.</p>
 
     <p>Each view of a <code>Document</code> presented in a browsing
@@ -266,16 +266,18 @@ interface Window : views::AbstractView {
       and <code>DocumentWindow</code> interfaces.</p>
 
       <div class="section"><h4 id="">2.1.1. Attributes</h4>
+        
        
+        <p><code>Window</code> objects <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> implement the following attributes:</p>
 
       <dl>
         <dt><dfn xml:id="attr-window" id="attr-window"><code>window</code></dfn></dt>
-        <dd>This attribtue <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be a reference to the same
+        <dd>The <code>window</code> attribute <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be a reference to the same
         <code>Window</code> object that has the attribute (a
         self-reference).</dd>
 
         <dt><dfn xml:id="attr-self" id="attr-self"><code>self</code></dfn></dt>
-        <dd>This attribtue <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be a reference to the same
+        <dd>This <code>self</code> attribute <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be a reference to the same
         <code>Window</code> object that has the attribute (a
         self-reference). Consequently, it also <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be a reference to
         the same object as the <code>window</code> attribute.</dd>
@@ -312,7 +314,7 @@ interface DocumentWindow : views::DocumentView {
 
       <p>The value of the <code>defaultView</code> property inherited
       by objects that implement the <code>DocumentWindow</code>
-      interfacefrom the <code>AbstractView</code> interface <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be
+      interface inherit from the <code>AbstractView</code> interface <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> be
       the default view for the browsing context presenting the
       document, if any. In addition to the <code>AbstractView</code>
       interface, the default view <em class="rfc2119" title="Keyword in RFC 2119 context">MUST</em> implement the
