@@ -204,7 +204,7 @@
     context.</p>
 
     <p>A document that implements the DOM Core <code>Document</code>
-    interface and is presented in a browsing context interface MUST
+    interface and is presented in a browsing context MUST
     also implement the <code>DocumentWindow</code> interface.</p>
 
     <p>Each view of a <code>Document</code> presented in a browsing
@@ -278,16 +278,18 @@ interface Window : views::AbstractView {
       and <code>DocumentWindow</code> interfaces.</p>
 
       <section>
-       <title>Attributes</title>
+        <title>Attributes</title>
+       
+        <p><code>Window</code> objects MUST implement the following attributes:</p>
 
       <dl>
         <dt><dfn xml:id="attr-window"><code>window</code></dfn></dt>
-        <dd>This attribtue MUST be a reference to the same
+        <dd>The <code>window</code> attribute MUST be a reference to the same
         <code>Window</code> object that has the attribute (a
         self-reference).</dd>
 
         <dt><dfn xml:id="attr-self"><code>self</code></dfn></dt>
-        <dd>This attribtue MUST be a reference to the same
+        <dd>This <code>self</code> attribute MUST be a reference to the same
         <code>Window</code> object that has the attribute (a
         self-reference). Consequently, it also MUST be a reference to
         the same object as the <code>window</code> attribute.</dd>
@@ -326,7 +328,7 @@ interface DocumentWindow : views::DocumentView {
 
       <p>The value of the <code>defaultView</code> property inherited
       by objects that implement the <code>DocumentWindow</code>
-      interfacefrom the <code>AbstractView</code> interface MUST be
+      interface inherit from the <code>AbstractView</code> interface MUST be
       the default view for the browsing context presenting the
       document, if any. In addition to the <code>AbstractView</code>
       interface, the default view MUST implement the
