@@ -1,6 +1,14 @@
 2006-03-19  Maciej Stachowiak  <mjs@apple.com>
         
         * source/Window.xml:
+        - fixed a number of grammar and spelling problems I found while
+        writing tests.
+        
+        * publish/Window.html: regenerated
+
+2006-03-19  Maciej Stachowiak  <mjs@apple.com>
+        
+        * source/Window.xml:
         - added Ian Davis as editor
         - added current and latest links
         - folded in Ian's attribute descriptions for basic attributes of the Window object
